# RobotPilots_task8

./: .gitignore  CMakeLists.txt  cv.txt
app/: CMakeLists.txt
app/src/: calibration.cpp
exe/: Task8  calibration
lib/: CMakeLists.txt
lib/include/: Camera.h  PnP.h
lib/src/: Camera.cpp
vino_task/: CMakeLists.txt  main.cpp
vino_task/src/YoloVino/: CMakeLists.txt
vino_task/src/YoloVino/config/: yolov5fourpoint_vino_config.yaml  yolov8pose_vino_config.yaml
vino_task/src/YoloVino/include/: yolo_vino.hpp
vino_task/src/YoloVino/model/: Armor_v8npose_250510_7200.xml  yolov5n_0714_15000_cv.xml
vino_task/src/YoloVino/src/: yolo_vino.cpp
